<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reference_signal_generator</name>
  <version>1.0.0</version>
  <description>This package implements a ROS node capable of publishing standard reference signals, mainly for use in robotic control systems. The services used to trigger the signals are based on the definitions of another package, reference_signal_srvs.</description>
  <maintainer email="victor.noppeney@alumni.usp.br">Vtn21</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <exec_depend>reference_signal_srvs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
